--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   bloc: ^8.0.3
   collection: ^1.15.0
+  flutter_bloc: ^8.0.1
+  counter: ^0.2.2
 
 dev_dependencies:
   flutter_test:
